--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>
       With more and more people accessing the web from multiple devices,
       it is now crucial to use Responsive Web Design (RWD) when you create
-      a website because it allows their sites to be automatically displayed
+      a website because it allows your sites to be automatically displayed
       on any system, no matter what the screen size is. My friend who is
       smartphone user visited my portfolio website complained that my website
       is difficult to navigate because they have to pinch and zoom to do anything.
