--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       a website because it allows your sites to be automatically displayed
       on any system, no matter what the screen size is. My friend who is
       smartphone user visited my portfolio website complained that my website
-      is difficult to navigate because they have to pinch and zoom to do anything.
+      is difficult to navigate because she has to pinch and zoom to do anything.
       This is maybe because my website is optimized for only desktop.
       Although, I could create a mobile friendly website for the smartphone users,
       using RWD is the best way to solve the multi-device optimization problem for my website.
